--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
       <img src="./images/gameover.png" width="500" alt="logo">
     </div>
   <script src="./js/main.js"></script>
+  <script src="./js/fireball.js"></script>
+  <script src="./js/mecha.js"></script>
+  <script src="./js/volcano.js"></script>
+  <script src="./js/kenny.js"></script>
 
 </body>
 </html>
