Main project done

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
   <script src="./js/mecha.js"></script>
   <script src="./js/volcano.js"></script>
   <script src="./js/kenny.js"></script>
+  <script src="./js/heart.js"></script>
 
 </body>
 </html>
