--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     
     <!-- GAME OVER SCREEN -->
     <div id="game-over-screen" class="container">
-      <p class="top-center"> You ate 4 Kennies ! </p>
+      <p class="top-center"> </p>
       <img src="./images/gameover.png" width="500" alt="logo">
       
     </div>
